--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2396,6 +2396,9 @@ display: none;
     }
 }
 @media (max-width: 1160px) {
+    .home-locations {
+        background-size: contain;
+    }
     .expertise-name {
         font-size: 0.8rem;
     }
