fixing background images

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2844,6 +2844,9 @@ display: none;
 }
 
 @media (max-width: 576px) {
+    .home-locations {
+        min-height: 400px;
+    }
     .map-container-cards {
         position: relative;
         margin-bottom: 100px;
