--- a/client/src/index.css
+++ b/client/src/index.css
@@ -17,6 +17,7 @@
     --blue-light: #004080;
     --grey-light: #dde4ed;
     --grey-dark: #64748b;
+    --violet: rgb(143, 0, 72);
 }
 
 body {
@@ -120,20 +121,14 @@ img {
     margin: 0 auto;
 }
 
-.home-map {
-    height: 600px;
-}
-
+.home-map,
 .location-map-section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    height: 600px;
 }
 
 .fa-map-marker-alt {
     font-size: 30px;
-    color: rgb(243,74, 2);
+    color: rgb(143, 0, 72);
     cursor: pointer;
     z-index: 10;
 }
@@ -148,15 +143,6 @@ img {
     top: 0;
     left: 0;
 }
-.location-info-window {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    justify-content: space-between;
-}
-.location-card-words {
-    padding: 5px;
-}
 .pagination-arrows {
     display: flex;
     margin-bottom: 7px;
@@ -167,7 +153,7 @@ img {
 }
 .pagination-arrow .fas {
     font-size: 1rem;
-    color: rgb(243,74, 2);
+    color: rgb(143, 0, 72);
 }
 .pagination-arrow:disabled .fas {
     opacity: 0.7;
@@ -184,7 +170,8 @@ img {
 .map-float-title {
     font-size: 16px;
     margin: 0 0 3px 0;
-    color: #922C02;
+    color:rgb(143, 0, 72);
+
 }
 
 .map-float-info {
@@ -213,25 +200,13 @@ img {
 }
 
 .map-float-info-container.show-extra {
-    border: 2px solid rgb(218, 145, 0);
+    border: 2px solid rgb(143, 0, 72);
 }
 
 .map-container {
     position: relative;
     height: 100%;
     width: 100%;
-}
-
-.map-container-cards {
-    position: relative;
-    margin-bottom: 100px;
-    display: flex;
-    height: 75vh;
-    width: 90vw;
-    border-radius: 1px;
-    box-shadow: 0.5px 0.5px 40px rgba(0,0,0,.1);
-
-    padding: 10px 20px;
 }
 
 .map-float-menu-info {
@@ -281,30 +256,8 @@ img {
     width: 165px;
 }
 
-.info-window-text-cards {
-    font-size: 12px;
-    width: 200px;
-}
-
-.location-card-info {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    justify-content: space-between;
-}
-
 .info-window-image {
     border-radius: 0 0 2x 2px;
-}
-
-.info-window-image-container-cards {
-    display: flex;
-    flex-direction: row;
-}
-
-.info-window-image-cards {
-    max-height: 45vh;
-    max-width: 428px;
 }
 
 .close-info-window {
@@ -320,10 +273,7 @@ img {
 .info-window-image-container {
     margin: 10px -10px 0 -10px;
 }
-.info-window-icons-cards {
-    display: flex;
-    align-items: center;
-}
+
 /*CAROUSEL STYLES */
 
 .home-hero {
@@ -331,7 +281,7 @@ img {
     min-height: 720px;
     /* background-color: var(--blue); */
     background-color: white;
-    border-bottom: 5px solid #f34a02;
+    /* border-bottom: 5px solid rgb(143, 0, 72); */
 }
 
 .Carousel-container {
@@ -359,11 +309,40 @@ img {
     align-items: center;
     text-align: center;
 }
-
-.carousel-img {
+/* Define the fade-in animation */
+@keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  
+  /* Define the fade-out animation */
+  @keyframes fadeOut {
+    0% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+    }
+  }
+  
+  /* Apply the initial animation to the element */
+  .carousel-img {
+    animation: fadeIn 0.5s ease-in forwards; /* Fade in over 0.5 seconds */
     height: 100%;
     width: 100%;
-}
+  }
+  
+  /* Apply the fade-out animation after a delay */
+  .carousel-img.fade-out {
+    animation: fadeOut 0.5s ease-out forwards; /* Fade out over 0.5 seconds */
+    animation-delay: 3s; /* Delay the fade-out for 3 seconds */
+  }
+  
+  
 
 @keyframes fadeOut {
     from {
@@ -388,7 +367,7 @@ img {
 }
 /* HEADER STYLES */
 .main-header {
-    background-color: var(--white);
+    background-color: var(--violet);
     padding: 25px 0 0 0;
 }
 
@@ -419,9 +398,20 @@ img {
     flex-direction: row;
 
 }
-
+.usa-flag {
+    display: inline-block;
+    font-size: 24px; /* Adjust the size as needed */
+  }
+  
+  .stripes {
+    color: red; /* Red color for stripes */
+  }
+  
+  .stars {
+    color: blue; /* Blue color for stars */
+  }
+  
 .header-image {
-    width: 300px;
     height: auto; /* This allows the image to be responsive */
     background-size: cover; /* Adjust the background size as needed */
     background-repeat: no-repeat;
@@ -434,21 +424,33 @@ img {
 }
 
 .header-button-yellow {
-    background-color: transparent;
+    background-color: white;
     border-style: solid;
-    border-color: var(--grey-dark);
+    border-color: var(--violet);
     border-width: 2px;
 }
 
 .header-button-yellow:active {
     color: var(--black);
 }
+.navbar-oar-buttons {
+    display: flex;
+}
+
+.navbar-special-buttons {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
 
 .header-button-dark,
 .header-button-dark:active {
-    background-color: var(--black);
+    background-color: var(--violet);
     color: var(--white);
     margin-right: 10px;
+    border-style: solid;
+    border-color: var(--white);
+    border-width: 1px;
 }
 
 .team-btn,
@@ -485,7 +487,7 @@ img {
 
 .nav-link {
     display: block;
-    color: var(--black);
+    color: var(--white);
     padding: 18px;
     text-decoration: none;
     border-bottom: 2px solid transparent;
@@ -494,7 +496,7 @@ img {
 }
 
 .nav-link:hover {
-    background-color: rgba(240, 93, 31, 0.3);
+    background-color: rgba(248, 247, 246, 0.3);
 }
 
 .sub-link.mobile-nav-link {
@@ -506,7 +508,7 @@ img {
 }
 
 .nav-link.active {
-    border-bottom: 2px solid rgb(243,74, 2);
+    border-bottom: 2px solid rgb(143, 0, 72);
 }
 
 .nav-link-container:hover > .nav-link {
@@ -521,7 +523,7 @@ img {
 }
 
 .submenu-list {
-    min-width: 244px;
+    min-width: 264px;
     display: grid;
     align-items: center;
     grid-gap: 0px; /* Adjust the gap between items */
@@ -558,12 +560,12 @@ img {
 }
 
 .sub-link:active {
-    color: var(--black);
+    color: rgba(248, 247, 246, 0.3);
 }
 
 .sub-link:hover,
 .sub-link.active {
-    background-color: rgba(240, 93, 31, 0.3);
+    background-color: rgba(151, 150, 149, 0.2);
 }
 
 /* END NAVBAR STYLES */
@@ -720,7 +722,7 @@ img {
     margin: 0px;
     padding: 5px 0px 0px 0px;
     font-weight: 400;
-    border-bottom: 1px solid rgb(243,74, 2); /* Set the color you want for the line */
+    border-bottom: 1px solid rgb(143, 0, 72); /* Set the color you want for the line */
     padding-bottom: 15px; /* Adjust as needed to control the space between the text and the line */
     color: white;
     font-size: 3rem;
@@ -743,10 +745,10 @@ img {
 .about-container-bottom-left {
     display: flex;
     flex: 1;
-    background-image: url(https://i.imgur.com/thiV4LE.webp);
+    /* background-image: url(https://i.imgur.com/thiV4LE.webp); */
     background-size: cover;
 
-    height: 100vh;
+    /* height: 100vh; */
     width: 100%;
     justify-content: center;
     align-items: center;
@@ -825,7 +827,7 @@ img {
     background-size: contain;
     background-position: top;
     background-attachment: fixed;
-    border-bottom: 5px solid rgb(243,74, 2);
+    border-bottom: 5px solid rgb(143, 0, 72);
     color: #fff;
     padding: 40px;
     position: relative;
@@ -870,7 +872,11 @@ img {
 
 .grid-item {
     padding: 22px;
-    width: calc(100% / 3);
+    margin: 10px;
+    width: calc(90% / 4);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .physician-header {
@@ -919,7 +925,7 @@ img {
 
 .physician-right {
     width: 60%;
-    padding: 50px 50px 15px 50px;
+    padding: 50px 50px 15px;
 }
 
 .specialties {
@@ -1635,8 +1641,8 @@ display: none;
   margin: 1.6rem;
   border-radius: 8rem;
   border: none;
-  background-color: rgba(243,74, 2, 100%);
-  color: black;
+  background-color: rgba(143, 0, 72, 40%);
+  color: white;
   align-self: center;
   font-size: 0.9rem;
   opacity: 30%;
@@ -1657,8 +1663,8 @@ display: none;
     margin: 1.6rem;
     border-radius: 8rem;
     border: none;
-    background-color: rgba(243,74, 2, 100%);
-    color: black;
+    background-color: rgba(143, 0, 72, 100%);
+    color: white;
     align-self: center;
     font-size: 0.9rem;
     opacity: 80%;
@@ -1693,7 +1699,7 @@ display: none;
   margin: 1.6rem;
   border-radius: 8rem;
   border: none;
-  background-color: rgba(243,74, 2, 100%);
+  background-color: rgba(143, 0, 72, 100%);
   color: black;
   align-self: center;
   font-size: 0.9rem;
@@ -1880,14 +1886,14 @@ display: none;
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-image: url('https://i.imgur.com/YA8w0SN.webp');
+    background-image: url('/public/CaliBackground.jpg');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
 }
 
 .home-expertise .fas {
-    color: rgb(243,74, 2);
+    color: rgb(143, 0, 72);
     font-size: 1.8rem;
 }
 
@@ -1934,7 +1940,7 @@ display: none;
 }
 
 .expertise-item {
-    width: calc(88% / 5);
+    width: 25.6%;
     margin: 0px 0px 0px 0px;
     padding: 0px 0px 0px 0px;
     display: flex;
@@ -2009,7 +2015,7 @@ display: none;
 .home-team {
     align-items: center;
     /* background: url(https://i.imgur.com/77LJQ2y.webp) 0 0 no-repeat; */
-    background: rgb(243, 74, 2);
+    background: rgb(143, 0, 72);
     background-position: 50%;
     background-size: cover;
     color: #fff;
@@ -2024,7 +2030,7 @@ display: none;
 .home-locations {
     align-items: center;
     /* background: url(https://i.imgur.com/77LJQ2y.webp) 0 0 no-repeat; */
-    background-image: url('https://i.imgur.com/YA8w0SN.webp');
+    background-image: url('/public/CaliBackground.jpg');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -2040,12 +2046,12 @@ display: none;
 
 .home-locations {
     /* background: url(https://i.imgur.com/pP2cSdc.webp) 0 0 no-repeat; */
-    border-bottom: solid 5px rgb(243,74, 2);
+    border-bottom: solid 5px rgb(143, 0, 72);
 }
 
 .location-icon-container {
     /* padding: 40px 0 0 0; */
-    color: rgb(243, 74, 2);
+    color: rgb(143, 0, 72);
     text-align: center;
     display: flex;
     justify-content: space-around;
@@ -2084,7 +2090,7 @@ display: none;
 
 /* REVIEWS */
 .home-reviews {
-    border-top: 5px solid #f34a02;
+    border-top: 5px solid rgb(143, 0, 72);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -2122,7 +2128,7 @@ display: none;
     flex-direction: column;
     align-items: center;
     color: var(--white);
-    box-shadow: 0px 0px 6px rgba(243, 74, 2, 50%);
+    box-shadow: 0px 0px 6px rgba(143, 0, 72, 50%);
     border-radius: 4px;
     background-color: #696969	;
 }
@@ -2139,7 +2145,7 @@ display: none;
 
 .review-info .fa {
     position: absolute;
-    color: rgba(243, 74, 2, 100%);
+    color: rgba(143, 0, 72, 100%);
     font-size: 1rem;
 }
 
@@ -2301,14 +2307,14 @@ display: none;
     min-height: inherit;
     padding: 55px;
     position: relative;
-    width: 50%;
+    /* width: 50%; */
     z-index: 1;
 }
 
 .home-banner:after {
-    background: rgba(243, 74, 2, 0.6);
+    background: rgba(143, 0, 72, 0.2);
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(0.1px);
+    backdrop-filter: blur(0.5px);
     -webkit-backdrop-filter: blur(0.1px);
     content: '';
     display: inline-block;
@@ -2318,8 +2324,8 @@ display: none;
     top: 0;
     -webkit-transform: skew(-19deg);
     transform: skew(-18deg);
-    width: calc(100% - 160px);
-    min-width: 840px;
+    width: calc(64% - 148px);
+    min-width: 750px;
     z-index: -1;
 
 }
@@ -2360,7 +2366,6 @@ display: none;
 }
 
 
-
 @media (min-width: 1025px) {
     .nav-link-container:hover > .submenu {
         display: flex;
@@ -2377,13 +2382,6 @@ display: none;
     .expertise-name {
         font-size: 0.8rem;
     }
-    .sub-link {
-        padding: 15px 10px 15px 10px;
-        font-size: 0.9rem;
-    }
-    .submenu-multi-column {
-        min-width: 820px;
-    }
 }
 @media (max-width: 1295px) {
     .pages-header {
@@ -2396,9 +2394,6 @@ display: none;
     }
 }
 @media (max-width: 1160px) {
-    .home-locations {
-        background-size: contain;
-    }
     .expertise-name {
         font-size: 0.8rem;
     }
@@ -2406,9 +2401,6 @@ display: none;
         width: 30%;
     }
     .header-title {
-        display: none;
-    }
-    .header-title-div {
         display: none;
     }
     .about-title-right {
@@ -2423,6 +2415,10 @@ display: none;
     }
     span#h-four-temp-fix {
         margin: 45px 0 15px 0;
+    }
+
+    .mobile-show {
+        display: block;
     }
 
     .expertise-header-description {
@@ -2594,27 +2590,12 @@ display: none;
     .pagination-arrow .fas:disabled {
         opacity: 0.7;
     }
-    .main-footer {
-        padding: 20px 0 20px 0;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: center;
-    }
-    .footer-grid {
-        margin: 0px 0px 40px 0px;
-        display: flex;
-        flex-direction: row;
-    }
-    .footer-link {
-        margin: 4px;
-    }
-    #h-four-temp-fix {
-        margin-top: auto;
-        margin-bottom: 0px;
-    }
+
 }
 @media (max-width: 1015px) {
+    .grid-item {
+        width: calc(90% / 2);
+    }
     .expertise-name {
         font-size: 0.7rem;
     }
@@ -2675,12 +2656,8 @@ display: none;
     }
 }
 @media (max-width: 768px) {
-    .mobile-show {
-        display: block;
-    }
     .expertise-item {
         width: 100%;
-        align-items: normal;
     }
     #appointment-form {
         height: 100vh;
@@ -2746,9 +2723,6 @@ display: none;
     .header-top {
         display: block;
         text-align: center;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
     }
 
     .page-top-header {
@@ -2760,7 +2734,7 @@ display: none;
     }
 
     .grid-item {
-        width: calc(100% / 2);
+        width: calc(90% / 2);
     }
 
     .physician-left {
@@ -2793,6 +2767,8 @@ display: none;
         -webkit-transform: skew(0deg);
         transform: skew(0deg);
         width: 100%;
+        backdrop-filter: blur(1.5px);
+        -webkit-backdrop-filter: blur(1.5px);
         min-width: 0px;
     }
 
@@ -2803,7 +2779,7 @@ display: none;
     }
 
     .banner-title {
-        font-size: 30px;
+        font-size: 48px;
         padding-right: 5px;
     }
     
@@ -2814,6 +2790,9 @@ display: none;
 
     .header-buttons-container {
         margin: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 
     .physician-name.desktop {
@@ -2826,13 +2805,8 @@ display: none;
 
     .home-reviews {
         padding: 0 35px 35px 35px;
-        background-size: auto;
-        background-repeat: repeat;
-        background-position: right;
     }
-    .home-expertise {
-        background-size: contain;
-    }
+
     .single-review-container {
         padding: 15px;
     }
@@ -2845,40 +2819,9 @@ display: none;
         width: 180px;
         left: -185px;
     }
-
 }
 
 @media (max-width: 576px) {
-    .home-locations {
-        min-height: 400px;
-    }
-    .map-container-cards {
-        position: relative;
-        margin-bottom: 100px;
-        display: flex;
-        flex-direction: column;
-        height: 90vh;
-        width: 90vw;
-        border-radius: 1px;
-        box-shadow: 0.5px 0.5px 40px rgba(0,0,0,.1);
-        padding: 10px 20px;
-    }
-    .location-info-window {
-        display: flex;
-        flex-direction: column;
-        height: 50%;
-        justify-content: space-between;
-    }
-    .location-card-info {
-        flex-direction: row;
-    }
-    .info-window-image-cards {
-        height: 165px;
-        align-self: center;
-    }
-    .location-card-words {
-        padding: 15px;
-    }
     #chat-form-lines-request-apt {
         width: 91%;
         padding-right: 20px;
@@ -2895,20 +2838,7 @@ display: none;
     }
     .pages-header {
         background-size: cover;
-    }
-    .header-image-container {
-        /* margin: none; */
-        max-width: 200px;
-        display: flex;
-        align-items: center;
-        /* margin: 0 auto 0px auto; */
-    }
-    .logo-link {
-        max-width: 200px;
-        align-items: center;
-    }
-    .header-image {
-        max-width: 200px;
+
     }
     .grid-item {
         width: 100%;
@@ -2919,20 +2849,5 @@ display: none;
 
     .mobile-menu-button {
         top: 15px;
-    }
-    .header-button-yellow, .header-button-dark {
-        font-size: 0.8rem;
-    }
-}
-
-@media (max-width: 360px) {
-    .header-button-yellow, .header-button-dark {
-        font-size: 0.7rem;
-    }
-}
-
-@media (max-width: 270px) {
-    .header-button-yellow, .header-button-dark {
-        font-size: 0.5rem;
     }
 }
