--- a/client/src/index.css
+++ b/client/src/index.css
@@ -711,18 +711,24 @@ img {
 
 .oar-about-container {
     display: flex;
+    flex: 1;
     justify-content: flex-start;
     align-items: flex-start;
-    height: 100vh;
-    padding: 20px;
+    flex-direction: column;
+
+    padding: 40px;
+    overflow-y: clip; /* Add vertical scrolling if content exceeds max height */
     /* padding: 0 20px; Add some padding to the sides */
 }
 
 .oar-about-info {
-    margin: 20px;
-    margin-bottom: 20px; /* Add some space between items */
-    padding: 0px 10px 6px 6px;
-    box-shadow: rgb(221, 221, 221) 0px 2px 2px 7px;
+    display: flex;
+    flex: 1;
+    margin: 40px;
+    margin-bottom: 60px; /* Add some space between items */
+    padding: 10px 10px 6px 6px;
+    box-shadow: 0.5px 0.5px 214px rgba(0,0,0,.1);
+
 }
 
 .oar-about-text {
@@ -731,6 +737,8 @@ img {
 }
 
 .oar-about-image-container {
+    display: flex;
+    flex: 1;
     max-width: 100%; /* Ensure the image doesn't exceed its container */
     flex: 0 0 auto; /* Reset the flex properties for the image container */
     position: relative; /* Set position to relative for absolute positioning */
@@ -2450,8 +2458,8 @@ display: none;
     }
 }
 @media (max-width: 1295px) {
-    .oar-about-container {
-
+    .oar-about-text {
+        font-size: 0.9rem;
     }
     .pages-header {
         background-image: url(https://i.imgur.com/Cb9CEbY.webp);
@@ -2464,6 +2472,7 @@ display: none;
 @media (max-width: 1191px) {
     .oar-about-info {
         justify-content: flex-start !important;
+        min-height: 40vw !important;
     }
 
     .oar-about-text {
@@ -2472,13 +2481,12 @@ display: none;
     }
 
     .oar-about-image-container {
-        max-width: 60% !important;
+        max-width: 70% !important;
         justify-self: flex-start;
     }
     .oar-about-image {
         max-width: 100% !important;
     }
-
 }
 @media (max-width: 1160px) {
     
@@ -2686,6 +2694,13 @@ display: none;
 
 }
 @media (max-width: 1015px) {
+    .bullet-list-about {
+        display: grid;
+        grid-template-columns: 1fr 1fr; /* Two equal columns */
+        grid-gap: 0px 80px; /* Add some gap between columns */   
+        padding: 0px 0px 0px 0px;
+        margin: 0px 0px 0px 0px;
+    }
     .oar-about-info {
         justify-content: flex-start !important;
         height: 50% !important;
@@ -2742,7 +2757,7 @@ display: none;
 @media (max-width: 850px) {
     .oar-about-info {
         justify-content: flex-start !important;
-        height: 40% !important;
+        min-height: 40vh !important;
     }
 
     .oar-about-text {
@@ -2784,6 +2799,18 @@ display: none;
     }
 }
 @media (max-width: 768px) {
+    .oar-about-info {
+        min-height: 30vh !important;
+    }
+    .bullet-list-about {
+        grid-template-columns: 1fr 1fr; /* Two equal columns */
+        grid-gap: 0px 18px; /* Add some gap between columns */   
+        padding: 0px 0px 0px 10px;
+        margin: 0px 0px 0px 0px;
+    }
+    .oar-about-text {
+        font-size: 0.5rem;
+    }
     .expertise-item {
         width: 100%;
     }
@@ -2949,16 +2976,28 @@ display: none;
     }
 }
 @media (max-width: 640px) {
+    .oar-about-container {
+        min-height: 40vh;
+        min-width: 85vw;
+    }
     .oar-about-info {
         display: flex;
         position: relative;
-        height: 32% !important;
+        min-height: 18vh !important;
+        flex-direction: column-reverse;
+        min-width: 75vw !important;
+
+    }
+    .bullet-list-about {
+        display: grid; /* Use CSS Grid */
+        grid-template-columns: 1fr 1fr; /* Two equal columns */
+        grid-gap: 0px 0px; /* Add some gap between columns */   
     }
 
     .oar-about-text {
         width: 100%;
-        text-align: center;
-        margin-left: 0px;
+
+        margin-left: 5px;
         font-size: 0.5rem;
     }
 
@@ -2978,6 +3017,43 @@ display: none;
 
 
 @media (max-width: 576px) {
+    .oar-about-info {
+        display: flex;
+        position: relative;
+        min-height: 12vh !important;
+        flex-direction: column-reverse;
+        width: 75vw !important;
+        min-width: 95vw;
+        align-self: center;
+        padding: 0px 10px 6px 6px;
+        /* margin-bottom: 40px; */
+    }
+    .bullet-list-about {
+        display: grid; /* Use CSS Grid */
+        grid-template-columns: 1fr 1fr; /* Two equal columns */
+        grid-gap: 0px 25px; /* Add some gap between columns */   
+        width: 100% !important;
+        padding: 0px 0px 0px 10px;
+    }
+
+    .oar-about-text {
+        min-width: 10vw !important;
+
+        font-size: 0.5rem;
+    }
+
+    .oar-about-image-container {
+        position: relative;
+        z-index: 0;
+        max-width: 30vw !important;
+    }
+
+    .oar-doctor-image {
+        position: static;
+        width: 100%;
+        max-width: 25% !important;
+        margin-top: 10px; /* Adjust as needed */
+    }
     #form-divs {
         width: 90vw !important;
         position: unset !important;
@@ -3017,3 +3093,40 @@ display: none;
         top: 15px;
     }
 }
+
+@media (max-width: 600px) {
+    .oar-about-info {
+        display: flex;
+        position: relative;
+        height: 32% !important;
+        flex-direction: column-reverse;
+        min-width: 95vw !important;
+    }
+    .bullet-list-about {
+        display: grid; /* Use CSS Grid */
+        grid-gap: 0px 25px !important; /* Add some gap between columns */   
+        padding: 0px 0px 0px 20px !important;
+        margin: 0px !important;
+    }
+
+    .oar-about-text {
+        min-width: 6vh !important;
+        margin-left: 0px;
+        /* font-size: 0.4rem; */
+    }
+
+    .oar-about-image-container {
+        position: relative;
+        z-index: 0;
+        width: 100%;
+    }
+
+    .oar-doctor-image {
+        position: static;
+        width: 100%;
+        max-width: 100%;
+        margin-top: 10px; /* Adjust as needed */
+    }
+}
+
+
