--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2910,6 +2910,7 @@ display: none;
 } */
 
 .imageWrapperOARAbout {
+    margin-bottom: 100px;
     margin-bottom: 20px;
     width: 80%;
     display: flex;
@@ -2962,8 +2963,20 @@ border-bottom: 1px solid black;
 width: 100%;
 margin-bottom: 20px;
 }
+@media (min-width: 1275px) and (max-height: 805px) {
+    .imageWrapperOARAbout #aboutBackgroundForDoctor {
+        top: 105px;
+    }
+    .imageWrapperOARAbout #aboutDoctor {
+        top: 20px;
+    }
+}
 /*----- About.js -----*/
-
+@media (max-width: 1045px) {
+    .imageWrapperOARAbout img {
+        bottom: 205px;
+    }
+}
 @media (max-width: 800px) {
     .main-header {
         /* height: 23vh; */
@@ -3004,6 +3017,26 @@ margin-bottom: 20px;
         box-shadow: none;
         margin-top: unset;
     }
+    .imageWrapperOARAbout img {
+        bottom: 0; 
+    }
+}
+@media (min-height: 900px) and (max-width: 600px) {
+    .imageWrapperOARAbout #aboutBackgroundForDoctor {
+        bottom: 105px;
+    }
+    .imageWrapperOARAbout #aboutDoctor {
+        bottom: 120px;
+    }
+}
+
+@media (max-width: 900px) and (min-height: 700px) and (max-width: 800px) {
+    .imageWrapperOARAbout #aboutBackgroundForDoctor {
+        bottom: 85px;
+    }
+    .imageWrapperOARAbout #aboutDoctor {
+        bottom: 100px;
+    }
 }
 
 /* Organized Media  */
@@ -3034,6 +3067,10 @@ margin-bottom: 20px;
         width: 100%;
         box-shadow: none;
         margin-top: unset;
+    }
+    
+    .imageWrapperOARAbout img {
+          bottom: 0;
       }
       
       .aboutImageWrapper {
