--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2891,6 +2891,7 @@ display: none;
 }
 
 
+
 /* About.js */
 
 .container-oar-about {
@@ -2898,80 +2899,72 @@ display: none;
     flex-direction: column;
     align-items: center;
 }
-/* 
-.imageWrapperOARAbout {
-    margin-top: calc(0.4 *  20vw);
-    box-shadow: 0 0 0 2px rgba(218,102,123,1), 8px 8px 0 0 rgba(218,102,123,1);
-    width: 80%;
-    height: 100vh;
-    display: flex;
-    flex-direction: row;
-    margin-bottom: 20px;
-} */
-
 .imageWrapperOARAbout {
     margin-bottom: 100px;
     margin-bottom: 20px;
     width: 80%;
     display: flex;
-    flex-direction: row; /* Keep a row layout for larger screens */
+    flex-direction: row;
   }
-
 .aboutImageWrapper {
-position: relative;
-width: 100%;
-
-
-/* max-height: 500px; */
-
-overflow: hidden;
+    position: relative;
+    width: 100%;
+    overflow: hidden;
 }
 .aboutImageWrapper img {
-position: absolute;
-/* width: 100%; */
-height: auto;
-bottom: 0;
+    position: absolute;
+    height: auto;
+    bottom: 0;
 }
 .altImageOARAboutBackground {
-margin: 0px 0px 0px 0px;
-/* max-width: 80%; */
-z-index: 1; /* Ensure the background image is behind the doctor image */
+    margin: 0px 0px 0px 0px;
+    z-index: 1; 
 }
 .altImageOARDoctor {
-/* max-width: 1s00%; */
-
-height: auto;
-position: absolute;
-bottom: 0;
-z-index: 2;
+    height: auto;
+    position: absolute;
+    bottom: 0;
+    z-index: 2;
 }
 #aboutDoctor {
-/* bottom: 15px; */
-width: 60%;
-/* height: 100%; */
+    width: 80%;
 }
 #aboutBackgroundForDoctor {
     width: 100%;
-    /* height: 80vh; */
+    /* top: 100px; */
 }
 .altImageOther {
-max-width: 100%;
-height: auto;
+    max-width: 100%;
+    height: auto;
 }
 .separator-oar-about {
-border-bottom: 1px solid black;
-width: 100%;
-margin-bottom: 20px;
+    border-bottom: 1px solid black;
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+/* Organized Media  */
+/* About.js */
+@media (min-width: 805px) {
+    #aboutDoctor {
+        top: 0px;
+    }
+    #aboutBackgroundForDoctor {
+        top: 0px;
+    }
 }
 @media (min-width: 1275px) and (max-height: 805px) {
     .imageWrapperOARAbout #aboutBackgroundForDoctor {
         top: 105px;
     }
     .imageWrapperOARAbout #aboutDoctor {
-        top: 20px;
+        top: 0px;
+    }
+    .imageWrapperOARAbout {
+
+        width: 80%;
     }
 }
-/*----- About.js -----*/
 @media (max-width: 1045px) {
     .imageWrapperOARAbout img {
         bottom: 205px;
@@ -3029,7 +3022,6 @@ margin-bottom: 20px;
         bottom: 120px;
     }
 }
-
 @media (max-width: 900px) and (min-height: 700px) and (min-width: 359px) and (max-width: ) {
     .imageWrapperOARAbout #aboutBackgroundForDoctor {
         bottom: 105px;
@@ -3038,8 +3030,6 @@ margin-bottom: 20px;
         bottom: 120px;
     }
 }
-
-/* Organized Media  */
 @media (max-width: 320px) {
     .main-header {
         height: unset;
@@ -3130,6 +3120,6 @@ margin-bottom: 20px;
         color: #333;
       }
       
-  }
-/* ----- Organized Media ----- */
+}
 
+/* ----- Organized Media ----- */
