--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2910,6 +2910,7 @@ display: none;
     position: relative;
     width: 100%;
     overflow: hidden;
+    top: 100px;
 }
 .aboutImageWrapper img {
     position: absolute;
@@ -2945,15 +2946,21 @@ display: none;
 
 /* Organized Media  */
 /* About.js */
-@media (min-width: 805px) {
+@media (max-width: 850px) and (min-height: 1100px){
     #aboutDoctor {
-        top: 0px;
+        top:1px;
     }
     #aboutBackgroundForDoctor {
-        top: 0px;
+        top: 62px;
+    }
+    #aboutDoctor {
+        width: 64%;
     }
 }
 @media (min-width: 1275px) and (max-height: 805px) {
+    .aboutImageWrapper {
+        top: 0px;
+    }
     .imageWrapperOARAbout #aboutBackgroundForDoctor {
         top: 105px;
     }
@@ -2966,6 +2973,9 @@ display: none;
     }
 }
 @media (max-width: 1045px) {
+    .aboutImageWrapper {
+        top: 0px;
+    }
     .imageWrapperOARAbout img {
         bottom: 205px;
     }
@@ -2980,9 +2990,10 @@ display: none;
     .aboutImageWrapper {
         position: relative;
         width: 100vw;
-        margin-top: calc(-0.3 *  60vh);
-        height: calc(0.80 *  92vh);
+        margin-top: calc(-0.3 *  90vh);
+        height: calc(0.80 *  88vh);
         min-height: unset;
+        top: 0px;
     }
     .altImageOARDoctor {
         max-width: 65%;
