--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2898,22 +2898,27 @@ display: none;
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow:visible;
 }
 .imageWrapperOARAbout {
     margin-bottom: 100px;
     margin-bottom: 20px;
-    width: 80%;
+    /* width: 70%; */
     display: flex;
     flex-direction: row;
+    overflow:visible;
+
   }
 .aboutImageWrapper {
     position: relative;
     width: 100%;
     overflow: hidden;
     top: 100px;
+    overflow:visible;
+
 }
 .aboutImageWrapper img {
-    position: absolute;
+    /* position: absolute; */
     height: auto;
     bottom: 0;
 }
@@ -2928,7 +2933,7 @@ display: none;
     z-index: 2;
 }
 #aboutDoctor {
-    width: 80%;
+    width: 60%;
 }
 #aboutBackgroundForDoctor {
     width: 100%;
@@ -2951,15 +2956,15 @@ display: none;
         top:1px;
     }
     #aboutBackgroundForDoctor {
-        top: 62px;
+        /* top: 62px; */
     }
     #aboutDoctor {
-        width: 64%;
+        width: 60%;
     }
 }
 @media (min-width: 1275px) and (max-height: 805px) {
     .aboutImageWrapper {
-        top: 0px;
+        top: 100px;
     }
     .imageWrapperOARAbout #aboutBackgroundForDoctor {
         top: 105px;
@@ -2969,7 +2974,7 @@ display: none;
     }
     .imageWrapperOARAbout {
 
-        width: 80%;
+        width: 70%;
     }
 }
 @media (max-width: 1045px) {
@@ -2990,11 +2995,16 @@ display: none;
     .aboutImageWrapper {
         position: relative;
         width: 100vw;
-        margin-top: calc(-0.3 *  90vh);
+        /* margin-top: calc(-0.3 *  90vh); */
+        margin-top: calc(-0.3 *  75vh);
         height: calc(0.80 *  88vh);
         min-height: unset;
         top: 0px;
     }
+    .aboutImageWrapper img {
+        position: absolute;
+    }
+
     .altImageOARDoctor {
         max-width: 65%;
 
@@ -3027,10 +3037,10 @@ display: none;
 }
 @media (min-height: 900px) and (max-width: 600px) {
     .imageWrapperOARAbout #aboutBackgroundForDoctor {
-        bottom: 105px;
+        bottom: 0px;
     }
     .imageWrapperOARAbout #aboutDoctor {
-        bottom: 120px;
+        bottom: 14px;
     }
 }
 @media (max-width: 900px) and (min-height: 700px) and (min-width: 359px) and (max-width: ) {
