--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2908,7 +2908,7 @@ display: none;
     flex-direction: row;
     overflow:visible;
 
-  }
+}
 .aboutImageWrapper {
     position: relative;
     width: 100%;
@@ -2920,7 +2920,7 @@ display: none;
 .aboutImageWrapper img {
     /* position: absolute; */
     height: auto;
-    bottom: 0;
+    bottom: 24px;
 }
 .altImageOARAboutBackground {
     margin: 0px 0px 0px 0px;
@@ -2952,15 +2952,7 @@ display: none;
 /* Organized Media  */
 /* About.js */
 @media (max-width: 850px) and (min-height: 1100px){
-    #aboutDoctor {
-        top:1px;
-    }
-    #aboutBackgroundForDoctor {
-        /* top: 62px; */
-    }
-    #aboutDoctor {
-        width: 60%;
-    }
+
 }
 @media (min-width: 1275px) and (max-height: 805px) {
     .aboutImageWrapper {
@@ -2974,15 +2966,25 @@ display: none;
     }
     .imageWrapperOARAbout {
 
-        width: 70%;
+        width: 65%;
     }
 }
 @media (max-width: 1045px) {
+    .imageWrapperOARAbout {
+        width: 95%;
+    }
     .aboutImageWrapper {
-        top: 0px;
+        /* top: 0px; */
     }
     .imageWrapperOARAbout img {
-        bottom: 205px;
+        bottom: 191px;
+    }
+    .imageWrapperOARAbout {
+
+        /* width: 100%; */
+    }
+    #aboutDoctor {
+        width: 64%;
     }
 }
 @media (max-width: 800px) {
