--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2933,7 +2933,7 @@ display: none;
     z-index: 2;
 }
 #aboutDoctor {
-    width: 60%;
+    width: 62%;
 }
 #aboutBackgroundForDoctor {
     width: 100%;
@@ -2954,19 +2954,41 @@ display: none;
 @media (max-width: 850px) and (min-height: 1100px){
 
 }
-@media (min-width: 1275px) and (max-height: 805px) {
+/* @media (max-width: 1600px) and (min-width: 1360px) {
+    .aboutImageWrapper img {
+        bottom: 25px;
+    }
+} */
+@media (min-width: 1275px) and (max-height: 805px) and (min-width: 795px) {
     .aboutImageWrapper {
-        top: 100px;
+        top: 140px;
     }
     .imageWrapperOARAbout #aboutBackgroundForDoctor {
         top: 105px;
     }
     .imageWrapperOARAbout #aboutDoctor {
-        top: 0px;
+        /* top: 0px; */
+        bottom: 0px;
     }
     .imageWrapperOARAbout {
 
-        width: 65%;
+        width: 75%;
+    }
+}
+@media (min-height: 700px) and (max-width: 1300px) and (min-width: 1005px){
+    .aboutImageWrapper {
+        top: 140px;
+    }
+    .imageWrapperOARAbout #aboutBackgroundForDoctor {
+        top: 105px;
+    }
+    .imageWrapperOARAbout #aboutDoctor {
+        /* top: 0px; */
+        bottom: 62px;
+    }
+    .imageWrapperOARAbout {
+
+        width: 75%;
     }
 }
 @media (max-width: 1045px) {
