--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2901,6 +2901,7 @@ display: none;
     overflow:visible;
 }
 .imageWrapperOARAbout {
+    
     margin-bottom: 100px;
     margin-bottom: 20px;
     /* width: 70%; */
@@ -2951,14 +2952,6 @@ display: none;
 
 /* Organized Media  */
 /* About.js */
-@media (max-width: 850px) and (min-height: 1100px){
-
-}
-/* @media (max-width: 1600px) and (min-width: 1360px) {
-    .aboutImageWrapper img {
-        bottom: 25px;
-    }
-} */
 @media (min-width: 1275px) and (max-height: 805px) and (min-width: 795px) {
     .aboutImageWrapper {
         top: 140px;
@@ -2975,7 +2968,7 @@ display: none;
         width: 75%;
     }
 }
-@media (min-height: 700px) and (max-width: 1300px) and (min-width: 1005px){
+@media (min-height: 700px) and (max-width: 1300px) and (min-width: 1050px){
     .aboutImageWrapper {
         top: 140px;
     }
@@ -2991,25 +2984,58 @@ display: none;
         width: 75%;
     }
 }
-@media (max-width: 1045px) {
-    .imageWrapperOARAbout {
-        width: 95%;
+
+@media (max-width: 1100px) {
+    .main-header {
+        /* height: 23vh; */
+    }
+    .pages-header {
+        /* height: 18vh; */
     }
     .aboutImageWrapper {
-        /* top: 0px; */
+        position: relative;
+        width: 100vw;
+        /* margin-top: calc(-0.3 *  90vh); */
+        margin-top: calc(-0.3 *  45vh);
+        height: calc(0.80 *  88vh);
+        min-height: unset;
+        top: 0px;
     }
-    .imageWrapperOARAbout img {
-        bottom: 191px;
+    .aboutImageWrapper img {
+        position: absolute;
     }
-    .imageWrapperOARAbout {
 
-        /* width: 100%; */
+    .altImageOARDoctor {
+        max-width: 65%;
+
+    }
+    .altImageOARAboutBackground {
+        margin: 15px;    
+        max-width: unset;
+
+        box-shadow: 0 0 0 2px rgba(218,102,123,1), 8px 8px 0 0 rgba(218,102,123,1);
     }
     #aboutDoctor {
-        width: 64%;
+        width: unset;
+        height: unset;
+        bottom: 15px;
+    }
+    #aboutBackgroundForDoctor {
+        width: 100%;
+        height: unset;
+    }
+    .imageWrapperOARAbout {
+        width: unset;
+        height: unset;
+        flex-direction: column;
+        box-shadow: none;
+        margin-top: unset;
+    }
+    .imageWrapperOARAbout img {
+        bottom: 0; 
     }
 }
-@media (max-width: 800px) {
+@media (max-width: 760px) {
     .main-header {
         /* height: 23vh; */
     }
