updates to biggest screens, everything currently up to date!

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2955,7 +2955,7 @@ display: none;
 }
 .imageWrapperOARAbout {
     
-    margin-bottom: 100px;
+    margin-bottom: 300px;
     /* margin-bottom: 20px; */
     width: 100%;
     display: flex;
@@ -2977,13 +2977,12 @@ display: none;
     justify-content: flex-end;
 }
 .aboutImageWrapper img {
-    
     /* position: absolute; */
     height: auto;
     bottom: 0;
-    left: calc((100vw - 900px) / 2); /* Adjust the value based on the screen size */
-
-    margin-top: -100px;
+    left: calc((100vw - 728px) / 2);
+    margin-top: -32px;
+    bottom: 0x;
 }
 .altImageOARAboutBackground {
     margin: 0px 0px 0px 0px;
@@ -2999,10 +2998,10 @@ display: none;
     
 }
 #aboutDoctor {
-    width: 33%;
+    width: 36%;
 }
 #aboutBackgroundForDoctor {
-    width: 50%;
+    width: 58%;
     box-shadow:     
     /* -2px 0 0 rgba(218, 102, 123, 1), Right border */
     
@@ -3034,10 +3033,15 @@ display: none;
     box-shadow: 0 0 0 1px rgba(143, 0, 72,0.75), 4px 4px 0 0 rgba(143, 0, 72,0.75), 0 0 0 1px rgba(143, 0, 72,0.5), 4px 4px 0 0 rgba(143, 0, 72,0.5), 0 0 0 2px rgba(143, 0, 72,0.25), 8px 8px 0 0 rgba(143, 0, 72,0.25), 12px 12px 0 0 rgba(143, 0, 72,0.15);
     /* align-items: flex-start; */
     columns: repeat(2, 1fr); /* Two equal-width columns */
-    gap: 20px 10px;
-    padding: 20px;
-    margin-right: calc((100vw - 1500px) / 2); /* Adjust the value based on the screen size */
+    /* gap: 20px 10px; */
+    position: relative;
+    right: 215px;
+    top: 260px;
+
+    padding: 10px;
     display: grid;
+    z-index: 1;
+    background: ghostwhite;
     flex-direction: column; /* Stack items vertically */
 }
 #bullet-list-div-mobile {
@@ -3054,7 +3058,7 @@ display: none;
 .bullet-list-about {
     display: grid;
     grid-template-columns: repeat(2, 1fr); /* Two equal-width columns */
-    gap: 10px 45px; /* Add some space between items */
+    gap: 10px 20px; /* Add some space between items */
 }
 #bullet-list-div-mobile h2, p {
     font-size: 1.2rem;
@@ -3131,7 +3135,7 @@ display: none;
 
 /* Organized Media  */
 /* About.js */
-@media (min-height: 780px) and (min-width: 1200px) {
+@media (min-height: 780px) and (min-width: 1200px) and (max-witdh: 1600px) {
     .aboutImageWrapper img {
             /* position: absolute; */
             height: auto;
@@ -3153,7 +3157,7 @@ display: none;
         width: 35%;
     }
     .nav-buttons-div {
-        margin-right: calc(50vw - 50%);
+        /* margin-right: calc(50vw - 50%); */
         margin-top: 10px;
     }
 }
@@ -3443,6 +3447,19 @@ display: none;
     .header-button-yellow {
         text-decoration-line: none !important;
         font-size: 0.5rem;
+    }
+}
+@media (max-width: 1800px) and (min-width: 1400px) {
+    #aboutDoctor {
+        width: 37%;
+    }
+}
+@media (max-width: 1600px) and (min-width: 1400px) {
+    #aboutDoctor {
+        width: 42%;
+    }
+    #aboutBackgroundForDoctor {
+        width: 65%;
     }
 }
 @media (min-height: 970px) and (max-width: 615px) {
