--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3046,6 +3046,7 @@ display: none;
 }
 #bullet-list-div-mobile {
     /* width: 40%; */
+    
     box-shadow: 0 0 0 1px rgba(143, 0, 72,0.75), 4px 4px 0 0 rgba(143, 0, 72,0.75), 0 0 0 1px rgba(143, 0, 72,0.5), 4px 4px 0 0 rgba(143, 0, 72,0.5), 0 0 0 2px rgba(143, 0, 72,0.25), 8px 8px 0 0 rgba(143, 0, 72,0.25), 12px 12px 0 0 rgba(143, 0, 72,0.15);
     display: none;
     /* padding: 10px; */
@@ -3330,6 +3331,15 @@ display: none;
         display: flex;
         margin-right: 0px;
     }
+    #bullet-list-div-mobile h2, p {
+        font-size: 1.2rem;
+        /* align-self: center; */
+        text-align: center;
+        min-width: 40vw;
+        padding: 0px;
+        margin: 0px;
+        line-height: 1.3;
+    }
     * {
         overflow-x: hidden;
 
@@ -3381,8 +3391,33 @@ display: none;
         bottom: 0; 
     }
     #bullet-list-div-mobile {
-        margin-left: 0;
+        columns: repeat(2, 1fr);
+        gap: 20pxs 0px;
+        align-items: center;
+        align-self: center;
+        padding: 20px;
+    }
+    .bullet-list-about {
+        display: grid;
         flex-direction: column;
+        align-items: center;
+        text-align: center;
+        margin-top: 0;
+        padding: 0;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 15px 50px;
+    }
+    .bullet-list-about li {
+        list-style: none;
+        line-height: 1.3;
+        margin-bottom: 1px;
+        font-size: 1rem;
+        min-width: 100px;
+        padding: 8px;
+    }
+    .large {
+        font-size: 1.2rem;
     }
 }
 @media (max-height: 850px) and (min-width: 1000px) {
@@ -3550,13 +3585,14 @@ display: none;
         columns: repeat(2, 1fr); /* Two equal-width columns */
         gap: 2px 0px;
         align-items: center;
-        align-self: flex-start;
+        align-self: center;
+        width: 50%;
     }
     #bullet-list-div-mobile h2, p {
         font-size: 0.8rem;
         align-self: center;
         text-align: center;
-        max-width: 75vw;
+        max-width: 45vw;
         padding: 0px;
         margin: 0px;
         line-height: 1.3;
@@ -3596,7 +3632,7 @@ display: none;
         padding: 0;
         display: grid;
         grid-template-columns: repeat(2, 1fr); /* Two equal-width columns */
-        gap: 10px 35px; /* Add some space between items */
+        gap: 00px 5px; /* Add some space between items */
       }
       
       .bullet-list-about li {
@@ -3604,7 +3640,8 @@ display: none;
         line-height: 1.3;
         margin-bottom: 1px;
         font-size: 0.7em;
-        max-width: 20vw;
+        min-width: 70px;
+
       }
       
       .bullet-list-about h3 {
