kindof the form style i want

--- a/client/src/components/helpers/navbarHelpers/FormDiv.css
+++ b/client/src/components/helpers/navbarHelpers/FormDiv.css
@@ -2,53 +2,43 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: flex;
+    justify-content: flex-start;
     position: fixed;
-    bottom: 0; 
+    bottom: 0;
     width: 400px;
     height: max-content;
     right: 0;
-
     z-index: 2;
     padding: 0px;
     margin: 50px;
     border-style: solid;
     border-color: black;
     border-width: 1px;
-    background-color: rgba(203, 202, 202, 0.4); /* Semi-transparent background */
-    /* width: 300px; height: 200px; */
-
-	box-shadow: 10px 10px 42px 0 rgba(0,0,0,0.75);
+    background: linear-gradient(0deg, #505050, #303030); /* Lightened charcoal gradient */
+    box-shadow: 10px 10px 42px 0 rgba(0,0,0,0.75);
 }
 
-#form-div::after,
-#form-div::before {
-    mix-blend-mode: normal;
-    z-index: -2;
+#form-div:before, #form-div:after {
     content: '';
-    width: calc(100% + (16px * 2));
-    height: calc(100% + (20px * 2));
     position: absolute;
-    display: block;
-    animation: borderTopLeftCorner 2s ease-in-out infinite;
-    transform: translateX(-16px) translateY(-20px);
+    left: -16px;
+    top: -20px;
+    background: linear-gradient(45deg, #ff0000, #ff5555, #bcbcbc, #e0e0e0); /* Transitioning from red to silver */
+    background-size: 400%;
+    width: calc(100% + 32px);
+    height: calc(100% + 40px);
+    z-index: -3;
+    animation: steam 20s linear infinite;
 }
 
-#form-div::after {
-    background-color: rgba(203, 202, 202, 0.7); /* Semi-transparent background */
-    animation-delay: -5s;
-    clip-path: polygon(0 0, calc(100% - (30.3333333333px)) calc(0% + (30.3333333333px)), 100% 100%, calc(0% + (30.3333333333px)) calc(100% - (30.3333333333px)));
+#form-div:after {
+    filter: blur(15px);
 }
 
-#form-div::before {
-    background-color: rgba(143, 0, 72, 0.5);
-    clip-path: polygon(calc(0% + (30.3333333333px)) calc(0% + (30.3333333333px)), 100% 0, calc(100% - (30.3333333333px)) calc(100% - (30.3333333333px)), 0 100%);
+@keyframes steam {
+    0%, 100% { background-position: 0 0; }
+    50% { background-position: 400% 0; }
 }
-
-
-
-
-
 
 
 
@@ -56,16 +46,51 @@
 
 @keyframes growAndShrinkUpward {
     0%, 100% {
-        clip-path: polygon(0 100%, 50% 0, 100% 100%);
+        clip-path: polygon(0 0, 1% 100%, 40% 100%, 60% 100%, 99% 100%, 99% 0);
+/* 
+        ^ Y
+        |
+     1% |          (1%, 100%)      (40%, 100%)      (60%, 100%)      (99%, 100%)
+        |_______________*______________*______________*______________*
+        |             /           \      |      /           \      |
+     0% |           /             \     |     /             \     |
+        |         /               \    |    /               \    |
+        |_______*_________________*___*___*_________________*___*__________________> X
+        (0%, 0%)        (1%, 0%)      (40%, 0%)        (60%, 0%)      (99%, 0%) */
+     
+        transform: translate(0, 0) rotate(-1deg);
+    }
+    25% {
+        /* clip-path: polygon(1% 0, 0% 100%, 40% 100%, 60% 100%, 100% 100%, 100% 0); */
+        transform: translate(-10px, 0px) rotate(0deg);
     }
     50% {
-        clip-path: polygon(0 100%, 50% 100%, 100% 100%);
+        clip-path: polygon(2% 0, 0% 100%, 40% 100%, 60% 100%, 100% 100%, 99% 0);
+        transform: translate(-10px, 5px) rotate(1deg);
+    }
+    75% {
+        clip-path: polygon(1% 0, 0% 100%, 40% 100%, 60% 100%, 98% 100%, 99% 0);
+        transform: translate(10px, -0px) rotate(0deg);
+    }
+    100% {
+        /* clip-path: polygon(0 0, 1% 100%, 40% 100%, 60% 100%, 99% 100%, 100% 0); */
+        transform: translate(0, 0) rotate(-1deg);
     }
 }
-
 @keyframes growAndShrinkDownward {
     0%, 100% {
         clip-path: polygon(0 0, 1% 100%, 40% 100%, 60% 100%, 99% 100%, 99% 0);
+/* 
+        ^ Y
+        |
+     1% |          (1%, 100%)      (40%, 100%)      (60%, 100%)      (99%, 100%)
+        |_______________*______________*______________*______________*
+        |             /           \      |      /           \      |
+     0% |           /             \     |     /             \     |
+        |         /               \    |    /               \    |
+        |_______*_________________*___*___*_________________*___*__________________> X
+        (0%, 0%)        (1%, 0%)      (40%, 0%)        (60%, 0%)      (99%, 0%) */
+     
         transform: translate(0, 0) rotate(-3deg);
     }
     25% {
@@ -85,213 +110,42 @@
         transform: translate(0, 0) rotate(-3deg);
     }
 }
-
-
 .form-background {
     position: relative;
     background-color: rgba(245, 245, 245, 1);
 }
-
 .form-background::before,
 .form-background::after {
     content: '';
     position: absolute;
-	background-color: rgba(255, 255, 255, 0);
+	background: linear-gradient(180deg, #505050, #303030);
 	-webkit-backdrop-filter: blur(15px);
     border: solid rgba(0, 0, 0, 0.5) 1px;
 	backdrop-filter: blur(15px);
     z-index: 1;
     width: 100%;
-    height: 80px; /* Increase the height to make the triangles thicker */
+    height: 60%; /* Increase the height to make the triangles thicker */
     animation-duration: 6s;
     animation-timing-function: ease-in-out;
 }
 
 .form-background::before {
     animation: growAndShrinkUpward 30s ease-in-out infinite;
-    top: -20px; /* Adjust the positioning to maintain the same level of flatness */
+    top: -5px;
     left: 0;
-    z-index: -3;
-    clip-path: polygon(0 0, 0% 100%, 40% 100%, 60% 100%, 100% 100%, 100% 0);
+    z-index: -1;
+    clip-path: polygon(0 0, 20% 100%, 40% 100%, 60% 100%, 100% 100%, 100% 0);
+
+
 
 }
 .form-background::after {
     animation: growAndShrinkDownward 30s linear infinite;
     bottom: -5px; /* Adjust the positioning to maintain the same level of flatness */
     left: 0;
-    z-index: -3;
+    z-index: -1;
     clip-path: polygon(0 0, 20% 100%, 40% 100%, 60% 100%, 100% 100%, 100% 0);
 }
-
-
-
-@keyframes border {
-    0%, 25% {
-        -webkit-clip-path: polygon(
-                           0 0,
-                           calc(100% - 10px) 10px,
-                           100% 100%,
-                           10px calc(100% - 10px)
-        );
-        clip-path: polygon(
-                   0 0,
-                   calc(100% - 10px) 10px,
-                   100% 100%,
-                   10px calc(100% - 10px)
-        );
-    }
-    25%, 50% {
-        -webkit-clip-path: polygon(
-            10px 10px,
-            100% 0,
-            calc(100% - 10px) calc(100% - 10px),
-            0 100%
-        );
-        clip-path: polygon(
-            10px 10px,
-            100% 0,
-            calc(100% - 10px)
-            calc(100% - 10px),
-            0 100%
-        );
-    }
-    50%, 75% {
-        -webkit-clip-path: polygon(
-            10px 10px,
-            100% 0,
-            calc(100% - 10px) calc(100% - 10px),
-            0 100%
-        );
-        clip-path: polygon(
-            10px 10px,
-            100% 0,
-            calc(100% - 10px) calc(100% - 10px),
-            0 100%
-        );
-    }
-    75%, 100% {
-        -webkit-clip-path: polygon(
-            0 0,
-            calc(100% - 10px) 10px,
-            100% 100%,
-            10px calc(100% - 10px)
-        );
-        clip-path: polygon(
-            0 0,
-            calc(100% - 10px) 10px,
-            100% 100%,
-            10px calc(100% - 10px)
-        );
-    }
-}
-@keyframes borderTopLeftCorner {
-
-}
-/*SAVING accidentally looks like a page turning in a book */
-/* @keyframes turnPage {
-    0%, 25% {
-        -webkit-clip-path: polygon(
-                           0 0,
-                           calc(100% - 10px) 10px,
-                           100% 100%,
-                           10px calc(100% - 10px)
-        );
-        clip-path: polygon(
-                   0 0,
-                   calc(100% - 10px) 10px,
-                   100% 100%,
-                   10px calc(100% - 10px)
-        );
-    }
-    25%, 50% {
-        -webkit-clip-path: polygon(
-            calc(100% - 10px) 0,
-            100% 10px,
-            100% 100%,
-            0 calc(100% - 10px)
-        );
-        clip-path: polygon(
-            calc(100% - 10px) 0,
-            100% 10px,
-            100% 100%,
-            0 calc(100% - 10px)
-        );
-    }
-    50%, 75% {
-        -webkit-clip-path: polygon(
-            calc(100% - 10px) 0,
-            100% 10px,
-            100% 100%,
-            0 calc(100% - 10px)
-        );
-        clip-path: polygon(
-            calc(100% - 10px) 0,
-            100% 10px,
-            100% 100%,
-            0 calc(100% - 10px)
-        );
-    }
-    75%, 100% {
-        -webkit-clip-path: polygon(
-            0 0,
-            calc(100% - 10px) 10px,
-            100% 100%,
-            10px calc(100% - 10px)
-        );
-        clip-path: polygon(
-            0 0,
-            calc(100% - 10px) 10px,
-            100% 100%,
-            10px calc(100% - 10px)
-        );
-    }
-} */
-/*SAVING -------------------------------------------------*/
-
-
-
-
-/* @keyframes borderLeft {
-    0%, 25% {
-        -webkit-clip-path: polygon(0 0, calc(100% - 10px) 10px, 100% 100%, 10px calc(100% - 10px));
-        clip-path: polygon(0 0, calc(100% - 10px) 10px, 100% 100%, 10px calc(100% - 10px));
-    }
-    25%, 50% {
-        -webkit-clip-path: polygon(10px 10px, 100% 0, calc(100% - 10px) calc(100% - 10px), 0 100%);
-        clip-path: polygon(10px 10px, 100% 0, calc(100% - 10px) calc(100% - 10px), 0 100%);
-    }
-    50%, 75% {
-        -webkit-clip-path: polygon(10px 10px, 100% 0, calc(100% - 10px) calc(100% - 10px), 0 100%);
-        clip-path: polygon(10px 10px, 100% 0, calc(100% - 10px) calc(100% - 10px), 0 100%);
-    }
-    75%, 100% {
-        -webkit-clip-path: polygon(0 0, calc(100% - 10px) 10px, 100% 100%, 10px calc(100% - 10px));
-        clip-path: polygon(0 0, calc(100% - 10px) 10px, 100% 100%, 10px calc(100% - 10px));
-    }
-    100%, 75% {
-        -webkit-clip-path: polygon(0 0, calc(100% - 10px) 10px, 100% 100%, 10px calc(100% - 10px));
-        clip-path: polygon(0 0, calc(100% - 10px) 10px, 100% 100%, 10px calc(100% - 10px));
-    }
-    75%, 50% {
-        -webkit-clip-path: polygon(10px 10px, 100% 0, calc(100% - 10px) calc(100% - 10px), 0 100%);
-        clip-path: polygon(10px 10px, 100% 0, calc(100% - 10px) calc(100% - 10px), 0 100%);
-    }
-    50%, 25% {
-        -webkit-clip-path: polygon(10px 10px, 100% 0, calc(100% - 10px) calc(100% - 10px), 0 100%);
-        clip-path: polygon(10px 10px, 100% 0, calc(100% - 10px) calc(100% - 10px), 0 100%);
-    }
-    25%, 0% {
-        -webkit-clip-path: polygon(0 0, calc(100% - 10px) 10px, 100% 100%, 10px calc(100% - 10px));
-        clip-path: polygon(0 0, calc(100% - 10px) 10px, 100% 100%, 10px calc(100% - 10px));
-    }
-} */
-
-
-
-
-
-
-
 .form-groups {
     display: flex;
     flex-direction: row;
